--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <nav class="nav">
       <div class="nav__center container">
         <div class="nav__logo">
-					<h1>FREY <span>Relojes</span></h1>
+					<h1>FREY <span>Relojeria</span></h1>
 				</div>
 				<ul class="nav__list">
 					<span>
