--- a/producto-detalles.html
+++ b/producto-detalles.html
@@ -3,16 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JSON DEV - Productos detalles</title>
-
-    <!--Google fonts-->
+    <title>Detalles</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-
-    <!--Box icons-->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css"
@@ -21,12 +17,12 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <!--Navegation-->
+    <!--Navegacion-->
     <nav class="nav">
       <div class="nav__center container">
 				<a href="./index.html">
         <div class="nav__logo">
-          <h1>JSON <span>DEV</span></h1>
+          <h1>FREY <span>Relojeria</span></h1>
 				</div>
 			</a>
         <ul class="nav__list">
@@ -42,42 +38,7 @@
 		</nav>
 
 		<main class="container detalles" id="detalles">
-			<!-- <article class="detalle-grid">
-				<img src="https://cdn4.chrono24.com/images/topmodels/2875-7wlcl6ogfoc0qxg22ox6up9m-Original.png?auto=compress&amp;h=305" alt="" class="img-fluid">
-				<div class="detalles-content">
-					<h3>Relojes Originales</h3>
-					<div class="rating">
-						<span>
-							<i class="bx bxs-star"></i>
-						</span>
-						<span>
-							<i class="bx bxs-star"></i>
-						</span>
-						<span>
-							<i class="bx bxs-star"></i>
-						</span>
-						<span>
-							<i class="bx bxs-star"></i>
-						</span>
-						<span>
-							<i class="bx bx-star"></i>
-						</span>
-					</div>
-						<p class="price"><b>Precio: </b> $55.00</p>
-						<p class="description">
-							<b>Descripcion: </b> <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta quae ad ex sint expedita perspiciatis odit eligendi! Et quia ex aperiam dolorum sunt omnis maiores. Repudiandae delectus iste exercitationem vel?</span>
-						</p>
-						<p class="description">
-							<span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque voluptates consequuntur in assumenda odit hic, aut cupiditate dolorem aspernatur! Quibusdam iusto magnam vero maxime quisquam voluptatibus minima aliquam molestias, iure ratione commodi, reiciendis quasi.</span>
-						</p>
-
-						<div class="bottom">
-							<div class="btn__group">
-								<a href="" class="btn addToCart">Añadir carrito</a>
-							</div>
-						</div>
-				</div>
-			</article> -->
+			<!-- HTML A AGREGAR VIA SCRIPT con info del producto elegido -->
 		</main>
 
 		 <!--Carrito-->
@@ -91,28 +52,7 @@
 
         <div class="carrito__center">
 
-          <!-- <div class="carrito__item">
-
-            <img src="https://cdn4.chrono24.com/images/topmodels/2875-7wlcl6ogfoc0qxg22ox6up9m-Original.png?auto=compress&amp;h=305" alt="reloj">
-            <div>
-              <h3>Relojes Originales </h3>
-              <p class="price">$122</p>
-            </div>
-            <div>
-              <span>
-                <i class="bx bxs-up-arrow"></i>
-              </span>
-              <p>1</p>
-              <span>
-                <i class="bx bxs-down-arrow"></i>
-              </span>
-            </div>
-            <div>
-              <span class="remove__item">
-                <i class="bx bx-trash"></i>
-              </span>
-            </div>
-					</div>
+          <!-- HTML A AGREGAR VIA SCRIPT con info del producto elegido
 					 -->
         </div>
 
