--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Relojeria Frey</title>
+    <title>Relojería Frey</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
@@ -20,7 +20,7 @@
     <nav class="nav">
       <div class="nav__center container">
         <div class="nav__logo">
-					<h1>FREY <span>Relojeria</span></h1>
+					<h1>FREY <span>Relojería</span></h1>
 				</div>
 				<ul class="nav__list">
 					<span>
