--- a/producto-detalles.html
+++ b/producto-detalles.html
@@ -22,7 +22,7 @@
       <div class="nav__center container">
 				<a href="./index.html">
         <div class="nav__logo">
-          <h1>FREY <span>Relojeria</span></h1>
+          <h1>FREY <span>Relojería</span></h1>
 				</div>
 			</a>
         <ul class="nav__list">
