--- a/index.html
+++ b/index.html
@@ -5,14 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Relojería Frey</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css"/>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -78,11 +73,70 @@
 
         <div class="carrito__footer">
             <h3>Total: $ <span class="carrito__total">0</span></h3>
-            <button class="clear__carrito btn">remover carrito</button>
+            <button class="clear__carrito btn">Eliminar articulos</button>
+            <button type="button" class="btn clear__carrito" id="boton-comprar">Comprar</button>
         </div>
       </div>
     </section>
 
+    <div class="modal " tabindex="-1" id="modal-compra">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Su compra se realizó con exito</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <p>Gracias por elegirnos!</p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+            <a href="index.html" class="btn btn-success">Volver a comprar</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <footer class="container-fluid bg-grey py-5">
+      <div class="container">
+         <div class="row">
+            <div class="col-md-6">
+               <div class="row">
+                  <div class="col-md-6 ">
+                     <div class="logo-part">
+                         <h4>RELOJES FREY</h4>
+                        <p>Lavalle 1453, CABA</p>
+                        <p>Te:11-55535-5555 </p>
+                     </div>
+                  </div>
+                  <div class="col-md-6 px-4">
+                     <h6>Sobre nosotros</h6>
+                     <p>Relojeria FREY</p>
+                     <a href="https://www.instagram.com" class="btn-footer">Instagram</a><br>
+                     <a href="#" class="btn-footer"> Contactanos</a>
+                  </div>
+               </div>
+            </div>
+            <div class="col-md-6">
+               <div class="row">
+                  <div class="col-md-6 ">
+                     <h6>Noticias</h6>
+                     <form class="form-footer my-3">
+                        <input type="text"  placeholder="search here...." name="search">
+                        <input type="button" value="Go" >
+                     </form>
+                     <p>Busca tu reloj ideal</p>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
+      </footer>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/boxicons@latest/dist/boxicons.js"></script>
     <script src="./js/scripts.js"></script>
   </body>
