--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <span class="close__carrito">
           <i class="bx bx-x"></i>
         </span>
-        <h1>Su Carrito</h1>
+        <h1>Carrito</h1>
 
         <div class="carrito__center">
 
