--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <!--Productos-->
     <section class="productos">
       <div class="productos__center">
-        <!--Se agrega HTML para el producto desde el script -->
+        <!--Se agrega HTML para el producto desde js-->
       </div>
     </section>
 
